fixed nav spacing

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -7,7 +7,7 @@ header {
 }
 
 .page-link {
-  padding: 1.2em 2em;
+  padding: 2.5em 2em;
   display: inline-block;
   text-align: center;
 }
